Kubernetes/Azure/configure/prometheus-stack/networkpolicy_alertmanager.yaml
# See:
# https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/network-policies.md
# Allow any source to access Alertmanager on port 9093.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: alertmanager-web
  namespace: prometheus-stack
spec:
  ingress:
  - from:
    ports:
    - port: 9093
      protocol: TCP
  podSelector:
    matchLabels:
      app: alertmanager
---
# Allow only Alertmanager to access itself on port 9094.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: alertmanager-mesh
  namespace: prometheus-stack
spec:
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: app
          operator: In
          values:
          - alertmanager
        - key: alertmanager
          operator: In
          values:
          - main
    ports:
    - port: 9094
      protocol: TCP
    - port: 9094
      protocol: UDP
  podSelector:
    matchLabels:
      app: alertmanager
