Kubernetes/Azure/configure/prometheus-stack/networkpolicy_grafana.yaml
# See:
# https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/network-policies.md
# Allow any source to access Grafana on port 3000.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana
  namespace: prometheus-stack
spec:
  ingress:
  - ports:
    - port: 3000
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
